[Beta v1.0.0]

[Beta v1.0.01]
- Bugfix: popup menu of a DockTitle did not open on right click under windows
- Bugfix: Connection between DockableDisplayer and Dockable was not broken automatically (memory leak)